@@ -5,6 +5,9 @@ Changelog
 1.0b15 (unreleased)
 ===================
 
+- Make environment and host arguments for running ``batou local`` optional.
+  ``dev`` and ``localhost`` are the defaults now. Fixes #13034
+
 - Allow specifying secrets with [component:xy] in addition to [xy] to make it
   easier to discover when used to the environment overrides. Both options are
   supported now. Fixes #13003
